Bugfix scroll due to popup overflow

--- a/components/_shared/app-popup/app-popup.css
+++ b/components/_shared/app-popup/app-popup.css
@@ -12,6 +12,7 @@
     z-index: 100;
     opacity: 0;
     transition: opacity 0.4s;
+    overflow: hidden;
 }
 
 :host(.visible) {
